--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             align-items: center;
             justify-content: center;
             width: 100%;
-            aspect-ratio: 8 / 9;
+            aspect-ratio: 2 / 3;
             background: #f3f4f6;
             position: relative;
             overflow: hidden;
@@ -368,7 +368,7 @@
             display: none !important;
         }
         #links-grid .catalogue-card-thumb {
-            aspect-ratio: 1 / 1 !important;
+            aspect-ratio: 2 / 3 !important;
         }
         #links-grid .catalogue-card-logo {
             opacity: 1 !important;
@@ -633,8 +633,9 @@ Office: P-455 Bio Science - Psychology Wing</p>
 
 <h2 id="projects">Recent Projects</h2>
 <ul>
-    <li><a href="https://github.com/kylemath/LinoleumSecretHistory" target="_blank">LinoleumSecretHistory</a> - GitHub repository</li>
+    <li><a href="https://github.com/kylemath/ExileEnginePage" target="_blank">ExileEnginePage</a> - GitHub repository</li>
     <li><a href="https://github.com/kylemath/homePage" target="_blank">homePage</a> - Main homepage for kylemathewson.com and helper scripts</li>
+    <li><a href="https://github.com/kylemath/LinoleumSecretHistory" target="_blank">LinoleumSecretHistory</a> - GitHub repository</li>
     <li><a href="https://github.com/kylemath/gitBash" target="_blank">gitBash</a> - GitHub repository</li>
     <li><a href="https://github.com/kylemath/Generation" target="_blank">Generation</a> - GitHub repository</li>
     <li><a href="https://github.com/kylemath/biophotons" target="_blank">biophotons</a> - GitHub repository</li>
