deploy: a71f7a9667000d750fd46449b5e50ecd607ff69b

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             gap: 6px;
             background: linear-gradient(180deg,
                 rgba(0,0,0,0) 0%,
-                rgba(0,0,0,0.75) 30%,
+                rgba(0,0,0,0.95) 10%,
                 rgba(0,0,0,0.95) 100%);
             color: white;
             transform: translateY(100%);
@@ -212,33 +212,36 @@
         .catalogue-card-description {
             margin: 0;
             font-size: 0.75em;
-            color: rgba(255,255,255,0.95);
-            background: rgba(0,0,0,0.3);
+            color: white;
+            background: transparent;
             padding: 4px 6px;
             border-radius: 3px;
-            text-shadow: 0 1px 2px rgba(0,0,0,0.8);
+            text-shadow: white;
             line-height: 1.4;
             display: -webkit-box;
             -webkit-line-clamp: 3;
             line-clamp: 3;
             -webkit-box-orient: vertical;
             overflow: hidden;
+            font-weight: 500;
+            z-index: 10;
         }
         .catalogue-tags {
             display: flex;
             flex-wrap: wrap;
             gap: 4px;
-            font-size: 0.65em;
+            font-size: 0.6em;
             color: white;
         }
         .catalogue-tags span {
-            background: rgba(255,255,255,0.25);
-            backdrop-filter: blur(6px);
-            border-radius: 3px;
-            padding: 3px 7px;
-            border: 1px solid rgba(255,255,255,0.4);
-            font-weight: 600;
-            text-shadow: 0 1px 2px rgba(0,0,0,0.6);
+            background: rgba(255,255,255,0.15);
+            backdrop-filter: blur(4px);
+            border-radius: 10px;
+            padding: 2px 8px;
+            border: 1px solid rgba(255,255,255,0.25);
+            font-weight: 500;
+            text-shadow: 0 1px 2px rgba(0,0,0,0.4);
+            opacity: 0.85;
         }
         .catalogue-badge {
             display: none;
@@ -252,7 +255,8 @@
         .catalogue-links span {
             display: none;
         }
-        .catalogue-links a {
+        .catalogue-links a,
+        .catalogue-links button {
             color: white;
             text-decoration: none;
             background: rgba(255,255,255,0.2);
@@ -263,11 +267,22 @@
             font-weight: 700;
             transition: all 0.15s ease;
             text-shadow: 0 1px 2px rgba(0,0,0,0.6);
+            cursor: pointer;
+            font-family: Times, serif;
+            font-size: 1em;
         }
-        .catalogue-links a:hover {
+        .catalogue-links a:hover,
+        .catalogue-links button:hover {
             background: rgba(255,255,255,0.35);
             transform: translateY(-1px);
             box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+        }
+        .catalogue-links .demo-link {
+            background: rgba(59,130,246,0.5);
+            border: 1px solid rgba(96,165,250,0.6);
+        }
+        .catalogue-links .demo-link:hover {
+            background: rgba(59,130,246,0.7);
         }
         .catalogue-empty {
             font-size: 0.9em;
@@ -380,9 +395,16 @@
             -webkit-line-clamp: 2 !important;
             line-clamp: 2 !important;
             font-size: 0.8em !important;
+            color: rgba(255,255,255,0.95) !important;
+            text-shadow: 0 1px 2px rgba(0,0,0,0.8) !important;
+            font-weight: normal !important;
         }
         #links-grid .catalogue-card-logo-text {
             font-size: 1.1em !important;
+        }
+        #links-grid .catalogue-tags,
+        #links-grid .catalogue-links {
+            display: none !important;
         }
     </style>
 </head>
@@ -633,13 +655,13 @@ Office: P-455 Bio Science - Psychology Wing</p>
 
 <h2 id="projects">Recent Projects</h2>
 <ul>
+    <li><a href="https://github.com/kylemath/homePage" target="_blank">homePage</a> - Main homepage for kylemathewson.com and helper scripts</li>
     <li><a href="https://github.com/kylemath/CatalanQuadratic" target="_blank">CatalanQuadratic</a> - GitHub repository</li>
     <li><a href="https://github.com/kylemath/MaestroEEGApp" target="_blank">MaestroEEGApp</a> - GitHub repository</li>
     <li><a href="https://github.com/kylemath/flir" target="_blank">flir</a> - GitHub repository</li>
     <li><a href="https://github.com/kylemath/nehiyoMTB" target="_blank">nehiyoMTB</a> - Nehiyawewin trail signs for Edmonton</li>
     <li><a href="https://github.com/kylemath/EEGEdu" target="_blank">EEGEdu</a> - Interactive Brain Playground - Browser based tutorials on EEG with webbluetooth and muse</li>
     <li><a href="https://github.com/kylemath/artOfSoccerWar" target="_blank">artOfSoccerWar</a> - GitHub repository</li>
-    <li><a href="https://github.com/kylemath/homePage" target="_blank">homePage</a> - Main homepage for kylemathewson.com and helper scripts</li>
     <li><a href="https://github.com/kylemath/ModernWebDesign" target="_blank">ModernWebDesign</a> - GitHub repository</li>
     <li><a href="https://github.com/kylemath/gitBash" target="_blank">gitBash</a> - GitHub repository</li>
     <li><a href="https://github.com/kylemath/ExileEnginePage" target="_blank">ExileEnginePage</a> - GitHub repository</li>
@@ -724,6 +746,7 @@ Office: P-455 Bio Science - Psychology Wing</p>
     <li><a href="https://github.com/kylemath/eeg-notebooks" target="_blank">eeg-notebooks</a> - A collection of classic EEG experiments implemented with Python and Jupyter notebooks (contributor to original)</li>
     <li><a href="https://github.com/kylemath/mne-python" target="_blank">mne-python</a> - MNE : Magnetoencephalography (MEG) and Electroencephalography (EEG) in Python (35 commits ahead)</li>
     <li><a href="https://github.com/kylemath/pycovid" target="_blank">pycovid</a> - Python package to easily access the most updated Coronavirus data using Python/PIP (contributor to original, 9 commits ahead)</li>
+    <li><a href="https://github.com/kylemath/eeg-notebooks_v0.1" target="_blank">eeg-notebooks_v0.1</a> - A collection of classic EEG experiments implemented with Python and Jupyter notebooks (130 commits ahead)</li>
     <li><a href="https://github.com/kylemath/react-game-kit" target="_blank">react-game-kit</a> - Component library for making games with React  & React Native (9 commits ahead)</li>
     <li><a href="https://github.com/kylemath/muse-lsl" target="_blank">muse-lsl</a> - Python script to stream EEG data from the muse 2016 headset (1 commits ahead)</li>
     <li><a href="https://github.com/kylemath/ml4a-guides" target="_blank">ml4a-guides</a> - practical guides, tutorials, and code samples for ml4a (contributor to original, 2 commits ahead)</li>
@@ -1662,7 +1685,7 @@ Office: P-455 Bio Science - Psychology Wing</p>
                 <p class="catalogue-card-description">${project.oneLiner || ''}</p>
                 ${project.tags && project.tags.length ? `<div class="catalogue-tags">${project.tags.map(tag => `<span>${tag}</span>`).join('')}</div>` : ''}
                 <div class="catalogue-links">
-                    <span>Open Demo</span>
+                    <a class="demo-link" href="${project.demoUrl || project.githubUrl}" target="_blank" rel="noopener noreferrer">Demo</a>
                     <a class="github-link" href="${project.githubUrl}" target="_blank" rel="noopener noreferrer">GitHub</a>
                 </div>
             </div>
@@ -1680,7 +1703,7 @@ Office: P-455 Bio Science - Psychology Wing</p>
         }
         
         card.addEventListener('click', (event) => {
-            if (event.target.closest('.github-link')) {
+            if (event.target.closest('.github-link') || event.target.closest('.demo-link')) {
                 event.stopPropagation();
                 return;
             }
