--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Kyle E. Mathewson - Homepage</title>
+    <title>Kyle Elliott Mathewson - Homepage</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
@@ -427,7 +427,7 @@
 <div id="tab-about" class="tab-content active">
 
 
-<h1>Kyle E. Mathewson, PhD</h1>
+<h1>Kyle Elliott Mathewson, PhD</h1>
 
 <p><strong>Associate Professor, Faculty of Science - Psychology</strong><br>
 <strong>Director, Attention Perception and Performance Lab (APPLab)</strong><br>
